--- a/.gitignore
+++ b/.gitignore
@@ -252,5 +252,8 @@ cython_debug/
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
+# ruff
+.ruff_cache/
+
 # LSP config files
 pyrightconfig.json
