feat: add db settings

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 APP_HOST=http://0.0.0.0
 APP_PORT=8000
+POSTGRES_HOST=db
+POSTGRES_NAME=metestation
+POSTGRES_USER=user
+POSTGRES_PASSWORD=hackme
+POSTGRES_PORT=5432
