--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "FastApi Web Service Meteostation"
 license = "Apache-2.0"
 authors = ["Artur Agishev <finstape@mail.ru>"]
 readme = "README.md"
-packages = [{ include = "app" }]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 fastapi = "^0.115.12"
 starlette = "^0.46.2"
 pydantic = "^2.11.4"
@@ -26,7 +26,7 @@ pytest = "^7.4.0"
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ['py312']
 skip-string-normalization = true
 
 [tool.isort]
@@ -45,7 +45,7 @@ force_single_line = false
 
 [tool.ruff]
 line-length = 88
-target-version = "py311"
+target-version = "py312"
 fix = true
 exclude = [
   ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache",
