--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ fastapi = "^0.115.12"
 starlette = "^0.46.2"
 pydantic = "^2.11.4"
 pydantic-settings = "^2.9.1"
-sqlalchemy = "^2.0.41"
-alembic = "^1.15.2"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
+sqlalchemy-utils = "^0.41.2"
+alembic = "^1.13.1"
 uvicorn = "^0.34.2"
-asyncpg = "^0.30.0"
+asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
