--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg = {extras = ["binary"], version = "^3.2.9"}
 joblib = "^1.5.0"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
