--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ joblib = "^1.5.0"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
 httpx = "^0.28.1"
+async-lru = "^2.0.5"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
