fix: hotfix nginx config

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,24 @@
 server {
-    listen 8080 ssl;
+    listen 8080;
+    server_name 0.0.0.0;
+
+    location /api/ {
+        proxy_pass http://server:8000;
+        proxy_set_header Host $host;
+    }
+
+    location / {
+        return 301 https://$host:8443$request_uri;
+    }
+}
+
+
+server {
+    listen 8443 ssl;
     server_name 0.0.0.0;
     server_tokens off;
     ssl_certificate     /etc/nginx/cert.pem;
-	ssl_certificate_key /etc/nginx/private.key;
+	ssl_certificate_key /etc/nginx/privkey.pem;
 
     location / {
         try_files $uri @proxy_api;
