--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     restart: always
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/nginx/private.key:/etc/nginx/private.key
+      - ./docker/nginx/privkey.pem:/etc/nginx/privkey.pem
       - ./docker/nginx/cert.pem:/etc/nginx/cert.pem
     ports:
       - "8080:8080"
+      - "8443:8443"
     depends_on:
       - server
     networks:
