feat: add base telegram webhook support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ httpx = "^0.28.1"
 async-lru = "^2.0.5"
 matplotlib = "^3.10.3"
 seaborn = "^0.13.2"
+aiogram = "^3.20.0.post0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
